[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/PlayerAnimation.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/MainPlayerScript.gd" type="Script" id=2]
[ext_resource path="res://Assets /GFX/Background/bg_layer2.png" type="Texture" id=3]
[ext_resource path="res://Assets /GFX/Background/bg_layer1.png" type="Texture" id=4]
[ext_resource path="res://Assets /GFX/Background/bg_layer3.png" type="Texture" id=5]
[ext_resource path="res://Assets /GFX/Background/bg_layer4.png" type="Texture" id=6]
[ext_resource path="res://Assets /SFX/Chiptune_Adventures_1.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets /SFX/pain.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets /SFX/jump1.ogg" type="AudioStream" id=9]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 61.75
height = 68.8267

[node name="Bunny" type="KinematicBody2D"]
position = Vector2( 421.436, 213.546 )
script = ExtResource( 2 )

[node name="PlayerAnimation" parent="." instance=ExtResource( 1 )]
frame = 0

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( -2.58578, -8.15805 )
shape = SubResource( 1 )

[node name="PlayerCamera" type="Camera2D" parent="."]
position = Vector2( 750, 0 )
current = true
zoom = Vector2( 3, 3 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="PlayerCamera"]
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="PlayerCamera/ParallaxBackground"]
motion_mirroring = Vector2( 2048, 2048 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="PlayerCamera/ParallaxBackground/ParallaxLayer"]
margin_left = -3.72818
margin_right = 4106.28
margin_bottom = 2048.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer2" type="ParallaxLayer" parent="PlayerCamera/ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )
motion_offset = Vector2( 0, -1200 )
motion_mirroring = Vector2( 2048, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="PlayerCamera/ParallaxBackground/ParallaxLayer2"]
margin_top = 35.9594
margin_right = 2707.0
margin_bottom = 2083.96
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ParallaxLayer3" type="ParallaxLayer" parent="PlayerCamera/ParallaxBackground"]
motion_scale = Vector2( 0.25, 0.25 )
motion_offset = Vector2( 0, -1200 )
motion_mirroring = Vector2( 2048, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="PlayerCamera/ParallaxBackground/ParallaxLayer3"]
margin_top = 35.9594
margin_right = 2707.0
margin_bottom = 2083.96
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ParallaxLayer4" type="ParallaxLayer" parent="PlayerCamera/ParallaxBackground"]
motion_scale = Vector2( 0.175, 0.175 )
motion_offset = Vector2( 0, -1200 )
motion_mirroring = Vector2( 2048, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="PlayerCamera/ParallaxBackground/ParallaxLayer4"]
margin_left = -2.255
margin_top = 45.6907
margin_right = 2704.75
margin_bottom = 2093.69
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="HurtAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="GUI" parent="." instance=ExtResource( 10 )]

[connection signal="AnimateSprite" from="." to="PlayerAnimation" method="_on_Bunny_AnimateSprite"]
